Containerized microservices application

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # frontend:
 PORT=8080
-AUTH_API_ADDRESS=http://auth-api:8081
-TODOS_API_ADDRESS=http://todos-api:8082
+AUTH_API_ADDRESS=https://auth.sdrock.xyz
+TODOS_API_ADDRESS=https://todos.sdrock.xyz
 
 # auth-api:
 AUTH_API_PORT=8081
 JWT_SECRET=myfancysecret
-USERS_API_ADDRESS=http://users-api:8083
+USERS_API_ADDRESS=https://users.sdrock.xyz
 
 # todos-api:
 JWT_SECRET=myfancysecret
@@ -23,8 +23,10 @@ REDIS_HOST=redis-queue
 REDIS_PORT=6379
 REDIS_CHANNEL=log_channel
 
-#login details
-# USERNAME    PASSWORD
-admin Admin123
-hng HngTech
-user Password
+# login details (commented out properly or formatted as environment variables)
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=Admin123
+HNG_USERNAME=hng
+HNG_PASSWORD=HngTech
+USER_USERNAME=user
+USER_PASSWORD=Password
